--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
         "import/no-dynamic-require": "off",
         "no-console": "off",
         "no-plusplus": "off",
-        "no-unused-vars": "off"
+        "no-unused-vars": "off",
+        "no-shadow": "off"
     }
 }
