--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "express": "^4.17.1",
     "helmet": "^4.2.0",
     "joi": "^17.3.0",
+    "js-yaml": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
